patches-dsl/tests/fixtures/errors/song_cell_rejects_str_param.patches
pattern kick { trig: x . }

template bad(pat: str) {
    in: d out: d
    song s(ch) {
        play { <pat> }
    }
    module seq : MasterSequencer(channels: [ch]) { song: s }
    module out : AudioOut
    seq.clock[ch] -> out.in_left
}

patch {
    module b : bad(pat: kick)
}
